target/generated-sources/antlr4/iakbari/ruletranslator/parsers/N3Parser.java
// Generated from N3.g4 by ANTLR 4.4

	package iakbari.ruletranslator.parsers;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class N3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__24=1, T__23=2, T__22=3, T__21=4, T__20=5, T__19=6, T__18=7, T__17=8, 
		T__16=9, T__15=10, T__14=11, T__13=12, T__12=13, T__11=14, T__10=15, T__9=16, 
		T__8=17, T__7=18, T__6=19, T__5=20, T__4=21, T__3=22, T__2=23, T__1=24, 
		T__0=25, N3_NUMERICLITERAL=26, RATIONAL=27, DECIMAL=28, DOUBLE=29, INTEGER=30, 
		UNSIGNEDINT=31, N3_LANGCODE=32, N3_STRING=33, N3_VARIABLE=34, PREFIX=35, 
		BARENAME=36, N3_EXPLICITURI=37, WS=38, COMMENT=39;
	public static final String[] tokenNames = {
		"<INVALID>", "'@keywords'", "'@forAll'", "'^^'", "';'", "'{'", "'='", 
		"'}'", "'^'", "'<='", "'@this'", "'('", "','", "'@is'", "'.'", "'@of'", 
		"'['", "']'", "'=>'", "'@a'", "'!'", "'@forSome'", "'@has'", "')'", "'@prefix'", 
		"'@base'", "N3_NUMERICLITERAL", "RATIONAL", "DECIMAL", "DOUBLE", "INTEGER", 
		"UNSIGNEDINT", "N3_LANGCODE", "N3_STRING", "N3_VARIABLE", "PREFIX", "BARENAME", 
		"N3_EXPLICITURI", "WS", "COMMENT"
	};
	public static final int
		RULE_r = 0, RULE_g0 = 1, RULE_n3_declaration = 2, RULE_g8 = 3, RULE_g11 = 4, 
		RULE_g1 = 5, RULE_n3_universal = 6, RULE_g6 = 7, RULE_g9 = 8, RULE_g2 = 9, 
		RULE_n3_existential = 10, RULE_n3_statements_optional = 11, RULE_n3_statement = 12, 
		RULE_n3_subject = 13, RULE_n3_path = 14, RULE_n3_node = 15, RULE_n3_pathtail = 16, 
		RULE_n3_formulacontent = 17, RULE_g3 = 18, RULE_g4 = 19, RULE_g5 = 20, 
		RULE_n3_statementlist = 21, RULE_n3_statementtail = 22, RULE_n3_propertylist = 23, 
		RULE_n3_verb = 24, RULE_n3_object = 25, RULE_n3_objecttail = 26, RULE_n3_pathlist = 27, 
		RULE_n3_symbol = 28, RULE_n3_qname = 29, RULE_n3_literal = 30, RULE_n3_dtlang = 31;
	public static final String[] ruleNames = {
		"r", "g0", "n3_declaration", "g8", "g11", "g1", "n3_universal", "g6", 
		"g9", "g2", "n3_existential", "n3_statements_optional", "n3_statement", 
		"n3_subject", "n3_path", "n3_node", "n3_pathtail", "n3_formulacontent", 
		"g3", "g4", "g5", "n3_statementlist", "n3_statementtail", "n3_propertylist", 
		"n3_verb", "n3_object", "n3_objecttail", "n3_pathlist", "n3_symbol", "n3_qname", 
		"n3_literal", "n3_dtlang"
	};

	@Override
	public String getGrammarFileName() { return "N3.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public N3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(N3Parser.EOF, 0); }
		public G0Context g0() {
			return getRuleContext(G0Context.class,0);
		}
		public G2Context g2() {
			return getRuleContext(G2Context.class,0);
		}
		public G1Context g1() {
			return getRuleContext(G1Context.class,0);
		}
		public N3_statements_optionalContext n3_statements_optional() {
			return getRuleContext(N3_statements_optionalContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); g0();
			setState(65); g1();
			setState(66); g2();
			setState(67); n3_statements_optional();
			setState(68); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G0Context extends ParserRuleContext {
		public N3_declarationContext n3_declaration(int i) {
			return getRuleContext(N3_declarationContext.class,i);
		}
		public List<N3_declarationContext> n3_declaration() {
			return getRuleContexts(N3_declarationContext.class);
		}
		public G0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g0; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG0(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG0(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG0(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G0Context g0() throws RecognitionException {
		G0Context _localctx = new G0Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_g0);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__1) | (1L << T__0))) != 0)) {
				{
				{
				setState(70); n3_declaration();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class N3_declarationContext extends ParserRuleContext {
		public TerminalNode PREFIX() { return getToken(N3Parser.PREFIX, 0); }
		public G8Context g8() {
			return getRuleContext(G8Context.class,0);
		}
		public TerminalNode N3_EXPLICITURI() { return getToken(N3Parser.N3_EXPLICITURI, 0); }
		public N3_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n3_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterN3_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitN3_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitN3_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final N3_declarationContext n3_declaration() throws RecognitionException {
		N3_declarationContext _localctx = new N3_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_n3_declaration);
		try {
			setState(85);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76); match(T__1);
				setState(77); match(PREFIX);
				setState(78); match(N3_EXPLICITURI);
				setState(79); match(T__11);
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 2);
				{
				setState(80); match(T__24);
				setState(81); g8();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(82); match(T__0);
				setState(83); match(N3_EXPLICITURI);
				setState(84); match(T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G8Context extends ParserRuleContext {
		public TerminalNode BARENAME() { return getToken(N3Parser.BARENAME, 0); }
		public G11Context g11() {
			return getRuleContext(G11Context.class,0);
		}
		public G8Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g8; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG8(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG8(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG8(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G8Context g8() throws RecognitionException {
		G8Context _localctx = new G8Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_g8);
		try {
			setState(90);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(87); match(T__11);
				}
				break;
			case BARENAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(88); match(BARENAME);
				setState(89); g11();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G11Context extends ParserRuleContext {
		public TerminalNode BARENAME() { return getToken(N3Parser.BARENAME, 0); }
		public G11Context g11() {
			return getRuleContext(G11Context.class,0);
		}
		public G11Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g11; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG11(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG11(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG11(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G11Context g11() throws RecognitionException {
		G11Context _localctx = new G11Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_g11);
		try {
			setState(96);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(92); match(T__11);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); match(T__13);
				setState(94); match(BARENAME);
				setState(95); g11();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G1Context extends ParserRuleContext {
		public N3_universalContext n3_universal() {
			return getRuleContext(N3_universalContext.class,0);
		}
		public G1Context g1() {
			return getRuleContext(G1Context.class,0);
		}
		public G1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G1Context g1() throws RecognitionException {
		G1Context _localctx = new G1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_g1);
		try {
			setState(102);
			switch (_input.LA(1)) {
			case EOF:
			case T__20:
			case T__15:
			case T__14:
			case T__9:
			case T__4:
			case N3_NUMERICLITERAL:
			case N3_STRING:
			case N3_VARIABLE:
			case PREFIX:
			case BARENAME:
			case N3_EXPLICITURI:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); n3_universal();
				setState(100); g1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class N3_universalContext extends ParserRuleContext {
		public G6Context g6() {
			return getRuleContext(G6Context.class,0);
		}
		public N3_universalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n3_universal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterN3_universal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitN3_universal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitN3_universal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final N3_universalContext n3_universal() throws RecognitionException {
		N3_universalContext _localctx = new N3_universalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_n3_universal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(T__23);
			setState(105); g6();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G6Context extends ParserRuleContext {
		public G9Context g9() {
			return getRuleContext(G9Context.class,0);
		}
		public N3_symbolContext n3_symbol() {
			return getRuleContext(N3_symbolContext.class,0);
		}
		public G6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG6(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG6(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G6Context g6() throws RecognitionException {
		G6Context _localctx = new G6Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_g6);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); match(T__11);
				}
				break;
			case PREFIX:
			case BARENAME:
			case N3_EXPLICITURI:
				enterOuterAlt(_localctx, 2);
				{
				setState(108); n3_symbol();
				setState(109); g9();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G9Context extends ParserRuleContext {
		public G9Context g9() {
			return getRuleContext(G9Context.class,0);
		}
		public N3_symbolContext n3_symbol() {
			return getRuleContext(N3_symbolContext.class,0);
		}
		public G9Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g9; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG9(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG9(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG9(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G9Context g9() throws RecognitionException {
		G9Context _localctx = new G9Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_g9);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(113); match(T__11);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(114); match(T__13);
				setState(115); n3_symbol();
				setState(116); g9();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class G2Context extends ParserRuleContext {
		public N3_existentialContext n3_existential() {
			return getRuleContext(N3_existentialContext.class,0);
		}
		public G2Context g2() {
			return getRuleContext(G2Context.class,0);
		}
		public G2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterG2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitG2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitG2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final G2Context g2() throws RecognitionException {
		G2Context _localctx = new G2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_g2);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case EOF:
			case T__20:
			case T__15:
			case T__14:
			case T__9:
			case N3_NUMERICLITERAL:
			case N3_STRING:
			case N3_VARIABLE:
			case PREFIX:
			case BARENAME:
			case N3_EXPLICITURI:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); n3_existential();
				setState(122); g2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class N3_existentialContext extends ParserRuleContext {
		public G6Context g6() {
			return getRuleContext(G6Context.class,0);
		}
		public N3_existentialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n3_existential; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterN3_existential(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitN3_existential(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitN3_existential(this);
			else return visitor.visitChildren(this);
		}
	}

	public final N3_existentialContext n3_existential() throws RecognitionException {
		N3_existentialContext _localctx = new N3_existentialContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_n3_existential);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(T__4);
			setState(127); g6();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class N3_statements_optionalContext extends ParserRuleContext {
		public N3_statementContext n3_statement() {
			return getRuleContext(N3_statementContext.class,0);
		}
		public N3_statements_optionalContext n3_statements_optional() {
			return getRuleContext(N3_statements_optionalContext.class,0);
		}
		public N3_statements_optionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n3_statements_optional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterN3_statements_optional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitN3_statements_optional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitN3_statements_optional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final N3_statements_optionalContext n3_statements_optional() throws RecognitionException {
		N3_statements_optionalContext _localctx = new N3_statements_optionalContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_n3_statements_optional);
		try {
			setState(134);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__20:
			case T__15:
			case T__14:
			case T__9:
			case N3_NUMERICLITERAL:
			case N3_STRING:
			case N3_VARIABLE:
			case PREFIX:
			case BARENAME:
			case N3_EXPLICITURI:
				enterOuterAlt(_localctx, 2);
				{
				setState(130); n3_statement();
				setState(131); match(T__11);
				setState(132); n3_statements_optional();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class N3_statementContext extends ParserRuleContext {
		public N3_subjectContext n3_subject() {
			return getRuleContext(N3_subjectContext.class,0);
		}
		public N3_propertylistContext n3_propertylist() {
			return getRuleContext(N3_propertylistContext.class,0);
		}
		public N3_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n3_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterN3_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).exitN3_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof N3Visitor ) return ((N3Visitor<? extends T>)visitor).visitN3_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final N3_statementContext n3_statement() throws RecognitionException {
		N3_statementContext _localctx = new N3_statementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_n3_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); n3_subject();
			setState(137); n3_propertylist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class N3_subjectContext extends ParserRuleContext {
		public N3_pathContext n3_path() {
			return getRuleContext(N3_pathContext.class,0);
		}
		public N3_subjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_n3_subject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof N3Listener ) ((N3Listener)listener).enterN3_subject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
